Release history for Module-Metadata

  - fix use of newer interface from File::Path, to avoid another prereq on
    older perls (Graham Knop, PR#7)

1.000020 - 2014-04-27
  - new is_indexable() object method (ether, RT#84357)
  - eliminated dependency on IO::File (and by virtue, XS) - thanks, leont!
  - removed cruft in test infrastructure left behind from separation from
    Module::Build (ether)
  - repository moved to https://github.com/Perl-Toolchain-Gang/Module-Metadata
  - .pm file is now wholly ascii, for nicer fatpacking (RT#95086)
  - some code micro-optimizations (Olivier Mengué, PR#4)

1.000019 - 2013-10-06
  - warnings now disabled inside during the evaluation of generated version
    sub (BinGOs, RT#89282)

1.000018 - 2013-09-11
  - re-release of detainting fix without unstated non-core test dependencies

1.000017 - 2013-09-10
  - detaint version, if needed (RT#88576, Chris Williams)

1.000016 - 2013-08-21
  - Re-release to fix prereqs and other metadata

1.000015 - 2013-08-21
  - Change wording about safety/security to satisfy CVE-2013-1437

1.000014 - 2013-05-09
  - Remove "now installs to 'site' for perl 5.12+" from last version

1.000013 - 2013-05-08
  - Fix reliance on recent Test::Builder
  - Make tests perl 5.6 compatible
  - now installs to 'site' for perl 5.12+, as per p5p recommendation

1.000012 - 2013-05-04
  - improved package detection heuristics (thanks, Edward Zborowski!)
  - fix ->contains_pod (RT#84932, Tokuhiro Matsuno)
  - fix detection of pod after __END__ (RT79656, Tokuhiro Matsuno)

1.000011 - 2012-08-16
  - LEONT++ hasn't found any issues with my changes; mark it done (or at
    least ready for smoking). (APEIRON)

1.000010_003 - 2012-08-16 01:00:00
  - Remove other spurious message (APEIRON)

1.000010_002 - 2012-08-15 20:15:00
  - APEIRON is an idiot (APEIRON)

1.000010_001 - 2012-08-15 20:00:00
  - Dev release to test removing a warning about modules not using the
    'eval $VERSION' syntax which causes lots of spew. (APEIRON)